fix: Corrigindo visibilidade do texto na barra de pesquisa

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -56,7 +56,6 @@
     font-family: 'Source Sans 3', sans-serif;
     font-size: 18px;
     line-height: 28px;
-    color: #ABABAB;
     background-color: transparent;
 }
 
